@@ -6,12 +6,6 @@ BASE_DIR=`dirname $0`
 
 rm -rf $BASE_DIR/target
 
-MAVEN_OPTS="-Xmx1024m -Xms1024m -XX:MaxPermSize=512m"
-export MAVEN_OPTS
-
-JAVA_HOME="/Library/Java/JavaVirtualMachines/jdk1.7.0_13.jdk/Contents/Home/"
-export JAVA_HOME
-
 mvn clean install -DskipTests -f $BASE_DIR/../common/pom.xml
 mvn clean install -DskipTests -f $BASE_DIR/../domain/pom.xml
 mvn clean install -DskipTests -f $BASE_DIR/../webapp/pom.xml
